[package]
name = "Chapter1"
version = "0.1.0"
authors = ["Samratkashipathi <samratkashipathi1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.2", default-features = false }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
